# painting-ranks

./: .gitignore  README.md  pyproject.toml
painting_ranks/: .~lock.painting_data.csv#  painting_data.csv
piet_mondrian_painting_ranks/: painting_rank_calculator.py
