[tool.poetry]
name = "piet-mondrian-painting-ranks"
version = "0.1.0"
description = ""
authors = ["Kenneth <kencubed@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.2"
pytest = "^7.4.3"
pandas = "^2.1.3"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
